# seat-allocator

cpp/: CMakeLists.txt  export_lib.cpp  grid_shuffler_alg.cpp  grid_shuffler_alg.hpp  send_pyd_to_python.bat
cpp/test/: CMakeLists.txt  test.cpp
python/: .gitignore  backend.py  frontend.py  test.py  ui_build.bat  widget.ui
